[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "misty-nova-alarm"
version = "1.0.0"
description = "A production-quality CLI alarm clock with sound, Rich UI, and a background daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Misty Nova" }]
keywords = ["alarm", "cli", "scheduler", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=1.10,<3",
    "python-dateutil>=2.8",
    "apscheduler>=3.10,<4",
    # Sound: winsound (stdlib) on Windows; no external audio dependency
    # Process management: ctypes/os.kill (stdlib); no psutil needed
]

[project.scripts]
alarm = "alarm_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["alarm_cli*"]

[tool.setuptools.package-data]
"alarm_cli.assets" = ["*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
